# programa2mp

./: .gitignore  .gitmodules  Application.doxyfile  CMakeLists.txt  Dockerfile  LinuxShortcut.desktop  README.md  Toolchain-mingw32.cmake  application.xml  build.sh  default.apspec  installer.nsi  installer.sh  installer_deb.sh  translate.sh  version.txt
lib/: CMakeLists.txt
lib/resources/: AdjustTool.xrc  AnimationTool.xrc  AnotationProperties.xrc  AnotationTool.xrc  CHtmlToolbar.xrc  CMakeLists.txt  ContextTools.xrc  ElementMenu.xrc  GaboNG.pjd  GenericContextPanel.xrc  HotLinkProperties.xrc  HtmlViewer.xrc  LayerList.xrc  MapTool.xrc  MeasurementTool.xrc  PatInfo.xrc  PatManager.xrc  PatToolbar.xrc  PhotoProperties.xrc  Resources.xrc  VectorTool.xrc  blanktool.xpm
src/: Application.rc  ApplicationContextManager.cpp  ApplicationContextManager.h  ApplicationViewportManager.cpp  ApplicationViewportManager.h  ApplicationWindowManager.cpp  ApplicationWindowManager.h  CMakeFiles.txt  CMakeLists.txt  Cambios.txt  Context.cpp  Context.h  Context2D.cpp  Context2D.h  Context3D.cpp  Context3D.h  ContextHandlerFactory.cpp  ContextHandlerFactory.h  ContextHandlerInterface.h  ContextHtml.cpp  ContextHtml.h  ContextNodeFilter.cpp  ContextNodeFilter.h  HtmlPrintButton.cpp  HtmlPrintButton.h  Leame.txt  Licencia.txt  MainToolbar.cpp  MainToolbar.h  MainWindow.cpp  MainWindow.h  PatFile.cpp  PatFile.h  PatHelpers.cpp  PatHelpers.h  PatInfoPart.cpp  PatInfoPart.h  PatManagerWidget.cpp  PatManagerWidget.h  PatPropertiesHtmlViewerPart.cpp  (+15 more)
src/data/: densityslice.lbr  manifiesto  wmslibrary.lbr
src/data/ayuda/: ContextoActividades.html  ContextoDocumentos.html  ContextoFotografias.html  ContextoImagen.html  ContextoMapa.html  ContextoTerreno.html  GestionPats.html  about-Application.html  ayuda.hhk  ayuda.hhp  inicio.html
src/data/fotografia/: imagen.html
src/data/libraries/: datum.idx  densityslice.lbr  ellipsoid.idx  geografic.idx  projected.idx
src/data/mapa/grilla/: WGS-84_Grid_10deg.dbf  WGS-84_Grid_10deg.sbn  WGS-84_Grid_10deg.sbx  WGS-84_Grid_10deg.shp  WGS-84_Grid_10deg.shx  WGS-84_Grid_1deg.dbf  WGS-84_Grid_1deg.sbn  WGS-84_Grid_1deg.sbx  WGS-84_Grid_1deg.shx  WGS-84_Grid_20deg.dbf  WGS-84_Grid_20deg.sbn  WGS-84_Grid_20deg.sbx  WGS-84_Grid_20deg.shp  WGS-84_Grid_20deg.shx  WGS-84_Grid_2deg.dbf  WGS-84_Grid_2deg.sbn  WGS-84_Grid_2deg.sbx  WGS-84_Grid_2deg.shp  WGS-84_Grid_2deg.shx  WGS-84_Grid_30deg.dbf  WGS-84_Grid_30deg.sbn  WGS-84_Grid_30deg.sbx  WGS-84_Grid_30deg.shp  WGS-84_Grid_30deg.shx  WGS-84_Grid_5deg.dbf  WGS-84_Grid_5deg.sbn  WGS-84_Grid_5deg.sbx  WGS-84_Grid_5deg.shp  WGS-84_Grid_5deg.shx
src/data/multimedia/: multimedia.html
src/data/pat/: pat.html  pat_empty.html
src/locale/es/: resources.po
src/locale/es_AR/: Application.po
